Media Query to fix easy recipe on Mobile.

--- a/extend/custom-styles.less
+++ b/extend/custom-styles.less
@@ -94,3 +94,10 @@
         line-height: 19px;
     }
 }
+
+/* Easy Recipe Mobile Fix */
+@media (max-width: 960px) {
+    .easyrecipe .ERSRHS {
+        max-width: 100% !important;
+    }
+}
